feat(auth): add authentication endpoint and request validation - add auth package for hashing and generating new hashes and salts - add validator interface to api package to improve consistency - change salt and secret types in database and in db models to bytea/[]byte
